--- a/css/main.css
+++ b/css/main.css
@@ -100,17 +100,17 @@ section {
 }
 
 .js-shuttle-fade {
-	-webkit-animation: shuttle-fade 1.5s linear forwards;
-	-ms-animation: shuttle-fade 1.5s linear forwards;
-	-moz-animation: shuttle-fade 1.5s linear forwards;
-	-o-animation: shuttle-fade 1.5s linear forwards;
-	-animation: shuttle-fade 1.5s linear forwards;
+	-webkit-animation: shuttle-fade 1s linear forwards;
+	-ms-animation: shuttle-fade 1s linear forwards;
+	-moz-animation: shuttle-fade 1s linear forwards;
+	-o-animation: shuttle-fade 1s linear forwards;
+	-animation: shuttle-fade 1s linear forwards;
 }
 
 @-webkit-keyframes shuttle-fade {
 	0% {
 		opacity: 0;
-		top: 20em;
+		top: 10em;
 	}
 
 	100% {
@@ -123,7 +123,7 @@ section {
 @-ms-keyframes shuttle-fade {
 	0% {
 		opacity: 0;
-		top: 20em;
+		top: 10em;
 	}
 
 	100% {
@@ -137,7 +137,7 @@ section {
 @-moz-keyframes shuttle-fade {
 	0% {
 		opacity: 0;
-		top: 20em;
+		top: 10em;
 	}
 
 	100% {
@@ -149,7 +149,7 @@ section {
 @-o-keyframes shuttle-fade {
 	0% {
 		opacity: 0;
-		top: 20em;
+		top: 10em;
 	}
 
 	100% {
@@ -161,7 +161,163 @@ section {
 @keyframes shuttle-fade {
 	0% {
 		opacity: 0;
-		top: 20em;
+		top: 10em;
+	}
+
+	100% {
+		opacity: 1;
+		top: 0;
+	}
+}
+
+.ship-section {
+	background: transparent url("../img/kasei-valles-canyons.jpg") no-repeat center top;
+	background-size: cover;
+	text-align: center;
+}
+
+.ships-1,
+.ships-2 {
+	display: inline-block;
+	width: 150px;
+	position: relative;
+	opacity: 0;
+	top:20em;
+}
+
+.js-ships-1-fade {
+	-webkit-animation: ships-1-fade 1s linear forwards;
+	-ms-animation: ships-1-fade 1s linear forwards;
+	-moz-animation: ships-1-fade 1s linear forwards;
+	-o-animation: ships-1-fade 1s linear forwards;
+	animation: ships-1-fade 1s linear forwards;
+}
+
+.js-ships-2-fade {
+	-webkit-animation: ships-2-fade 1.5s linear forwards;
+	-ms-animation: ships-2-fade 1.5s linear forwards;
+	-moz-animation: ships-2-fade 1.5s linear forwards;
+	-o-animation: ships-2-fade 1.5s linear forwards;
+	animation: ships-2-fade 1.5s linear forwards;
+}
+
+@-webkit-keyframes ships-1-fade {
+	0% {
+		opacity: 0;
+		top: 10em;
+	}
+
+	100% {
+		opacity: 1;
+		top: 0;
+	}
+
+}
+
+@-ms-keyframes ships-1-fade {
+	0% {
+		opacity: 0;
+		top: 10em;
+	}
+
+	100% {
+		opacity: 1;
+		top: 0;
+	}
+
+
+}
+
+@-moz-keyframes ships-1-fade {
+	0% {
+		opacity: 0;
+		top: 10em;
+	}
+
+	100% {
+		opacity: 1;
+		top: 0;
+	}
+}
+
+@-o-keyframes ships-1-fade {
+	0% {
+		opacity: 0;
+		top: 10em;
+	}
+
+	100% {
+		opacity: 1;
+		top: 0;
+	}
+}
+
+@keyframes ships-1-fade {
+	0% {
+		opacity: 0;
+		top: 10em;
+	}
+
+	100% {
+		opacity: 1;
+		top: 0;
+	}
+}
+
+@-ms-keyframes ships-2-fade {
+	0% {
+		opacity: 0;
+		top: 10em;
+	}
+
+	100% {
+		opacity: 1;
+		top: 0;
+	}
+
+
+}
+
+@-webkit-keyframes ships-2-fade {
+	0% {
+		opacity: 0;
+		top: 10em;
+	}
+
+	100% {
+		opacity: 1;
+		top: 0;
+	}
+}
+
+@-moz-keyframes ships-2-fade {
+	0% {
+		opacity: 0;
+		top: 10em;
+	}
+
+	100% {
+		opacity: 1;
+		top: 0;
+	}
+}
+
+@-o-keyframes ships-2-fade {
+	0% {
+		opacity: 0;
+		top: 10em;
+	}
+
+	100% {
+		opacity: 1;
+		top: 0;
+	}
+}
+
+@keyframes ships-2-fade {
+	0% {
+		opacity: 0;
+		top: 10em;
 	}
 
 	100% {
